--- a/space.css
+++ b/space.css
@@ -75,6 +75,8 @@ body {
     position: absolute;
     left: 50%;
     top: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
     z-index: 100;
 }
@@ -106,6 +108,8 @@ body {
     color: aliceblue;
     position: absolute;
     left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
     transform: translateX(-50%);
     bottom: 0px;
     display: none;
@@ -125,6 +129,8 @@ body {
     right: 50%;
     font-family: 'Prompt', sans-serif;
     font-weight: 300;
+    -webkit-transform: translate(50%,-20%);
+    -ms-transform: translate(50%,-20%);
     transform: translate(50%,-20%);
     color: #6f7f94;
 }
@@ -154,6 +160,7 @@ body {
   border-radius: 50%;
   background: radial-gradient(circle at 100% 0%, #ffffff, rgba(255, 255, 255, 0) 58%);
   -webkit-filter: blur(5px);
+  filter: blur(5px);
   z-index: 2;
 
 }
@@ -173,6 +180,7 @@ body {
     height: 100%;
     background: radial-gradient(circle, rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.1) 40%, rgba(0, 0, 0, 0) 50%);
     -webkit-transform: rotateX(90deg) translateZ(-160px);
+    -ms-transform: rotateX(90deg) translateZ(-160px);
     transform: rotateX(90deg) translateZ(-160px);
     z-index: 1; }
 
@@ -183,6 +191,8 @@ body {
     position: absolute;
     bottom: 50%;
     right: -50px;
+    -webkit-transform: translatex(50%);
+    -ms-transform: translatex(50%);
     transform: translatex(50%);
     overflow: visible !important;
     display: none;
@@ -255,6 +265,8 @@ body {
     position: absolute;
     bottom: 50%;
     right: -50px;
+    -webkit-transform: translatex(50%);
+    -ms-transform: translatex(50%);
     transform: translatex(50%);
     overflow: visible !important;
     display: none;
@@ -283,6 +295,8 @@ body {
 }
 
 #halley {
+    -ms-transform: translateX(99%);
+    -webkit-transform: translateX(99%);
     transform: translateX(99%);
     z-index: 9; !important
 }
@@ -323,6 +337,8 @@ body {
     height: 100%;
     background-image: url(img/arm.png);
     background-size: 100% 100%; 
+    -webkit-transform: translateX(50%);
+    -ms-transform: translateX(50%);
     transform: translateX(50%);
     display: none;
 }
